--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "timecard-processor-frontend",
-  "version": "1.0.0",
+  "name": "timecard-processor-ui",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.0",
-    "lucide-react": "^0.263.1",
+    "@cloudscape-design/code-view": "^3.0.68",
+    "@cloudscape-design/components": "^3.0.1064",
+    "@cloudscape-design/design-tokens": "^3.0.0",
+    "@cloudscape-design/global-styles": "^1.0.45",
+    "axios": "^1.3.0",
+    "date-fns": "^2.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.5.0",
     "remark-gfm": "^4.0.1"
   },
   "scripts": {
@@ -39,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000"
+  "proxy": "http://localhost:8000"
 }
